# myServer

./: .gitignore
parse_cap/: Makefile  cadr.h  ethernet.cpp  ethernet.hpp  ip.cpp  ip.hpp  list.cpp  list.h  main.cpp  pcap.cpp  pcap.h  pcap_reader.cpp  pcap_reader.h  test
server/: .eslintrc  .gitignore  .sequelizerc  README.md  app.mjs  package-lock.json  package.json
server/config/: config.json  db.json
server/lib/: AppProvider.mjs
server/lib/api/rest-api/: app.mjs  serviceRunner.mjs
server/lib/domain-model/: Base.mjs  Models.mjs  User.mjs  index.mjs  initModels.mjs
server/lib/domain-model/created-models/: http.json
server/lib/use-cases/: Base.mjs  Exception.mjs
server/lib/use-cases/authentication/: email-verify.mjs  login.mjs  (+1 more)
server/lib/utils/: dumps.mjs  encryption.mjs  livr.mjs
server/migrations/: 20210128180639-InitialDb.cjs
server/seeders/: 20220530144527-init.cjs
server/seeds/: words.js
server_c/: .gitignore  CMakeLists.txt
server_c/src/: CMakeLists.txt  ai.cc  ai.hh  app.cc  app.cpp  app.hh  app.hpp  backpropagation.cpp  backpropagation.hpp  client.cc  client.cpp  client.hh  client.hpp  dataset.cpp  edge.cpp  edge.hpp  functions.cpp  functions.hpp  layer.cpp  layer.hpp  main.cc  main.cpp  neuralmain.cpp  neuralnetwork.cpp  neuralnetwork.hpp  neuron.cpp  neuron.hpp  optimizer.cpp  optimizer.hpp  server.cc  server.cpp  server.hh  server.hpp  shakingtree.cpp  shakingtree.hpp  socket.hh  socket.hpp  web.cc  web.cpp  web.hh  (+1 more)
tcp/: .gitignore  CMakeLists.txt
tcp/src/: CMakeLists.txt  client.c  client.h  main.c  sniff.c  sniff.h
(+13 files in other folders)
